# SmartIR

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  ARCHITECTURE.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  hacs.json  info.md  pyproject.toml  release-please-config.json  renovate.json  requirements_dev.txt  requirements_test.txt  swing_code_improved.json
.devcontainer/: devcontainer.json
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql.yml  hacs.yml  hassfest.yml  release.yml  security-audit.yml  stale.yml
custom_components/smartir/: __init__.py  climate.py  config_flow.py  config_flow_simple.py  const.py  controller.py  diagnostics.py  entity.py  fan.py  helpers.py  hub.py  icon.json  light.py  manifest.json  media_player.py  quality_scale.yaml  sensor.py  services.yaml  strings.json  system_health.py
custom_components/smartir/api/: __init__.py  codes.py  controller.py  exceptions.py
custom_components/smartir/devices/: __init__.py  climate.py  fan.py  light.py  media_player.py
custom_components/smartir/translations/: en.json  fr.json
docs/: CLIMATE.md  FAN.md  LIGHT.md  MEDIA_PLAYER.md  README.md  development.md
scripts/: develop  lint  release  setup  test
tests/: __init__.py  conftest.py  test_climate.py  test_config_flow.py  test_controller.py  test_controller_retry.py  test_controller_send.py  test_diagnostics.py  test_downloader.py  test_entity.py  test_fan.py  test_helpers.py  test_init.py  test_light.py  test_media_player.py  test_migration.py  test_system_health.py
tests/api/: test_codes.py  test_controller.py  test_exceptions.py
tests/devices/: test_climate.py  test_fan.py  test_light.py  test_media_player.py
