[project]
name = "smartir"
version = "1.18.2"
description = "SmartIR - Control IR/RF devices via Home Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = [
    "E402",   # Module level import not at top of file (needed for COMPONENT_ABS_DIR)
    "E712",   # Comparison to True/False (legacy code style)
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.smartir"]
force-sort-within-sections = true
combine-as-imports = true

[tool.mypy]
python_version = "3.13"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["custom_components/smartir"]
omit = [
    "tests/*",
    # Hub/bridge is a work-in-progress feature not wired into the config flow
    # yet, so it is excluded from coverage until it ships.
    "custom_components/smartir/hub.py",
    "custom_components/smartir/sensor.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
