[project]
name = "smartir"
version = "1.19.1"
description = "SmartIR - Control IR/RF devices via Home Assistant"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.13"

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["ARG001", "F841"]

[tool.ruff.lint.isort]
known-first-party = ["custom_components.smartir"]
force-sort-within-sections = true
combine-as-imports = true

[tool.mypy]
python_version = "3.14"
strict = true
# Home Assistant re-exports many symbols (ColorMode, MediaType, ...) without an
# explicit __all__, so implicit re-export must stay permissive.
implicit_reexport = true
ignore_missing_imports = true
disable_error_code = ["import-untyped"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.run]
source = ["custom_components/smartir"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
